# video_summarizer_backend

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  app.db  cookies.txt  pyproject.toml  requirements.txt  run_backend.py  test_download.py  الدحيح  ｜ ابن مجدي عبد الغني  (Epigenetics) [shkThcSCWqM].f248.webm.part
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js  vite.config.ts
frontend/js/: api.js  main.js
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/: ChatInterface.jsx  Dashboard.tsx  FeatureToggles.jsx  Header.tsx  LogTerminal.jsx  ResultsDashboard.jsx  UploadSection.jsx  VideoInput.tsx
frontend/src/components/views/: ChatView.tsx  ClipsView.tsx  (+1 more)
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useVideoProcessing.js
frontend/src/pages/: Dashboard.jsx  LoginPage.jsx  RegisterPage.jsx
frontend/src/services/: api.js  api.ts
src/video_summarizer/: __init__.py  __main__.py  config.py
src/video_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/video_summarizer/api/: auth.py  main.py
src/video_summarizer/cli/: __init__.py  main.py
src/video_summarizer/db/: __init__.py  database.py  models.py
src/video_summarizer/llm/: __init__.py  chat.py  client.py  clip_extractor.py  models.py  prompts.py  summarizer.py
src/video_summarizer/transcription/: __init__.py  audio_extractor.py  srt_formatter.py  transcriber.py  youtube_downloader.py
tests/: conftest.py  test_cli.py  test_llm.py  test_transcription.py
