[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-summarizer"
version = "0.1.0"
description = "A CLI tool for transcribing Arabic videos and generating AI-powered summaries and clips"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["whisper", "transcription", "video", "summarization", "arabic", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "yt-dlp>=2023.0.0",
    "ffmpeg-python>=0.2.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
video-summarizer = "video_summarizer.cli.main:cli"

[project.entry-points."console_scripts"]
video-summarizer = "video_summarizer.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
